Set up with Docker-compose that works fine

--- a/ads-dental-surgeries-lab7/Dockerfile
+++ b/ads-dental-surgeries-lab7/Dockerfile
@@ -3,8 +3,8 @@ FROM openjdk:17
 # Create a new app directory in the container for the application files
 RUN mkdir /app
 # Copy the compiled executable files/folders from host machine filesystem to the container/image's filesystem
-COPY target/ads-dental-surgeries-lab7-1.0-SNAPSHOT.jar /app
+COPY target/ads-dental-surgeries-1.0-SNAPSHOT.jar /app
 # Set the working directory for where next commands will execute at
 WORKDIR /app
 # Define the command to run the app when the contain is started
-CMD ["java", "-jar", "./ads-dental-surgeries-lab7-1.0-SNAPSHOT.jar"]
+CMD ["java", "-jar", "./ads-dental-surgeries-1.0-SNAPSHOT.jar"]
