--- a/ads-dental-surgeries-lab7/pom.xml
+++ b/ads-dental-surgeries-lab7/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>edu.miu.cs.cs489appsd</groupId>
-    <artifactId>ads-dental-surgeries-lab7</artifactId>
+    <artifactId>ads-dental-surgeries</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>ads-dental-surgeries-lab7</name>
+    <name>ads-dental-surgeries</name>
     <description>ads-dental-surgeries-lab7</description>
     <properties>
         <java.version>17</java.version>
@@ -32,11 +32,11 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.h2database</groupId>-->
+<!--            <artifactId>h2</artifactId>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -58,8 +58,17 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-docker-compose</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
